# lwiniparser

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
doc/: inifile.md
examples/: example1.c
inc/: lwiniparser.h
src/: lwiniparser.c
tests/: test.c
